<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/productsFragment">

    <fragment
        android:id="@+id/productsFragment"
        android:name="com.shopping.ui.ProductsFragment"
        android:label="@string/products"
        tools:layout="@layout/fragment_products">
        <action
            android:id="@+id/to_payment_fragment"
            app:destination="@id/paymentFragment" />

    </fragment>

    <fragment
        android:id="@+id/ordersFragment"
        android:name="com.shopping.ui.OrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/paymentFragment"
        android:name="com.shopping.ui.PaymentFragment"
        android:label="@string/payment"
        tools:layout="@layout/fragment_payment" />

</navigation>